Implemented Answer picker to pick answer at start of game,

--- a/src/styles/GamePage.css
+++ b/src/styles/GamePage.css
@@ -8,6 +8,14 @@
     height: 100%;
 }
 
+.player-container {
+    margin-top: 10px;
+}
+
+.player-container div {
+    background-color: #fff;
+}
+
 .player-guess-container {
     display: grid;
     grid-template-rows: 1fr;
