--- a/src/styles/Answer.css
+++ b/src/styles/Answer.css
@@ -3,7 +3,7 @@
 .answer {
     height: 100vh;
     width: 100%;
-    background-color: #f2f2f2; /* Light grey background */
+    background-color: #f2f2f2;
 }
 
 .answer-container {
